:sparkles: componente Banner

--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -3,11 +3,17 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 80px;
+    height: 100px;
 }
 
 .logo {
-    width: 50%;
+    width: 60%;
+}
+
+
+.links {
+    display: flex;
+    gap: 20px;
 }
 
 .link {
