--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
   --azul-escuro: #2E7BA2;
   --branco: #FFFFFF;
   --cinza: #444444;
+  --amarelo: #FACF9D;
 }
 
-body {
-  background: linear-gradient(180deg, #BFDAE6 0%, #FCF0DD 50%, #FACF9D 100%);
+* {
+  font-family: var(--font-textos);
+  padding: 0;
+  margin: 0;
 }
