--- a/src/components/LineUp/LineUp.module.css
+++ b/src/components/LineUp/LineUp.module.css
@@ -6,16 +6,42 @@
     width: fit-content;
     text-align: center;
     padding: 16px;
+    position: relative;
 }
+
+.titulo:after {
+    content: "";
+    position: absolute;
+    top: 50%; /* posição da linha abaixo do título */
+    height: 2px;
+    right: -400px;
+    width: 359.5px;
+    background-color: var(--mostarda);
+}
+
+.titulo:before {
+    content: "";
+    position: absolute;
+    left: -400px;
+    top: 50%; /* posição da linha à esquerda do elemento */
+    height: 2px;
+    width: 359.5px;
+    background-color: var(--mostarda);
+  }
 
 .divTitulo {
     display: flex;
     justify-content: center;
     margin-bottom: 45px;
+    align-items: center;
 }
 
 .listas {
     display: flex;
     flex-direction: column;
     gap: 32px;
+}
+
+.lineup {
+    margin-top: 56px;
 }
