--- a/src/pages/Inicio/Inicio.module.css
+++ b/src/pages/Inicio/Inicio.module.css
@@ -10,3 +10,34 @@
     padding: 32px 0 32px 0;
 }
 
+.foto {
+    margin-top: 56px;
+    width: 100%;
+    height: fit-content;
+}
+
+.botao {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.divBotao {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: fit-content;
+    background-color: var(--azul-escuro);
+    padding: 12px 20px;
+    color: var(--branco);
+    text-decoration: none;
+    margin-top: 24px;
+    box-shadow: 4px 4px 0px #444444;
+    border-radius: 16px;
+}
+
+.containerBotao {
+    display: flex;
+    justify-content: center;
+}
