--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -27,9 +27,9 @@
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
-    text-align: center;
     padding-top: 30px;
     margin-bottom: 24px;
+    text-align: justify;
 }
 
 .imagem {
