--- a/src/components/CardVertical/CardVertical.module.css
+++ b/src/components/CardVertical/CardVertical.module.css
@@ -1,11 +1,20 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 24px;
     margin-top: 32px;
-    margin-right: 20px;
-    margin-left: 20px;
+    width: 382.4px;
+    margin-bottom: 48px;
+}
+
+.containerRecuo {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 32px;
+    margin-bottom: 48px;
+    padding-top: 106px;
+    width: 382.4px;
 }
 
 .imagem {
