:lipstick: Responsividade da página inicial.

--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -36,3 +36,10 @@
     width: 500px;
 }
 
+@media (max-width: 768px) {
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+}
