--- a/src/components/Lista/Lista.module.css
+++ b/src/components/Lista/Lista.module.css
@@ -37,3 +37,12 @@
     font-size: 25px;
     color: var(--cinza);
 }
+
+
+@media (max-width: 768px) {
+    .listaArtistas{
+       flex-wrap: wrap;
+    }
+    
+    
+}
