--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -15,3 +15,15 @@
     font-size: 64px;
     margin-top: 0;
 }
+
+@media (max-width: 768px) {
+
+    .banner {
+        width: 768px;
+        height: 384px;
+    }
+
+    .titulo {
+        text-align: center;
+    }
+}
