--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -23,3 +23,23 @@
     font-size: 18px;
     text-decoration: none;
 }
+
+@media (max-width: 768px) {
+
+    * {
+        width: auto;
+    }
+
+    .menu {
+        flex-direction: column;
+        align-content: center;
+        max-width: 100%;
+        height: 200px;
+    }
+
+    .logo {
+        width: 233.905px;
+        height: 64px;
+        justify-content: space-evenly;
+    }
+}
