--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -20,6 +20,7 @@
     font-weight: 700;
     font-size: 32px;
     text-align: center;
+    margin-top: 32px;
 }
 
 .texto {
@@ -30,16 +31,38 @@
     padding-top: 30px;
     margin-bottom: 24px;
     text-align: justify;
+    line-height: 30px; 
 }
 
 .imagem {
     width: 500px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
 
     .container {
         display: flex;
         flex-direction: column;
     }
+
+    .texto {
+        padding-left: 60px;
+        padding-right: 60px;
+        text-align: center;
+        
+    }
+}
+
+
+@media (max-width: 500px) {
+
+    .imagem {
+        width: 312px;
+    }
+
+    .titulo {
+        font-size: 25px;
+    }
+
+
 }
