--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -10,7 +10,6 @@
     width: 60%;
 }
 
-
 .links {
     display: flex;
     gap: 20px;
@@ -24,7 +23,34 @@
     text-decoration: none;
 }
 
-@media (max-width: 768px) {
+.hamburguer {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .barra {
+    width: 30px;
+    height: 4px;
+    background-color: var(--branco);
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  .links {
+    display: flex;
+    gap: 20px;
+    
+  }
+  
+  .link {
+    color: var(--branco);
+    font-family: var(--font-textos);
+    font-weight: 700;
+    font-size: 18px;
+    text-decoration: none;
+  }
+
+@media (max-width: 1200px) {
 
     * {
         width: auto;
@@ -43,3 +69,54 @@
         justify-content: space-evenly;
     }
 }
+
+@media (max-width: 800px) {
+
+    .menu {
+        display: grid;
+        grid-template-columns: 1fr 1fr; 
+        align-items: center;
+        justify-items: center;
+        height: 200px;
+    }
+  
+    .logo {
+      display: block;
+      width: 233.905px;
+      height: 64px;
+      margin: 10px auto;
+    }
+  
+    .links {
+      display: none;
+    }
+  
+    .hamburguer {
+      display: block;
+      margin: 0 auto;
+    }
+  
+    .barra {
+      width: 30px;
+      height: 4px;
+      background-color: var(--branco);
+      margin: 6px 0;
+      transition: 0.4s;
+    }
+  
+    .menuAberto .barra {
+        display: none;
+      }
+  
+    .menuAberto .links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 200px;
+    }
+  
+    .menuAberto .link {
+      opacity: 1;
+    }
+  }
