--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -14,16 +14,24 @@
     font-weight: 400;
     font-size: 64px;
     margin-top: 0;
+    
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
 
     .banner {
-        width: 768px;
+        width: 100%;
         height: 384px;
     }
 
     .titulo {
         text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .titulo {
+        font-size: 30px;
     }
 }
