--- a/src/components/LineUp/LineUp.module.css
+++ b/src/components/LineUp/LineUp.module.css
@@ -7,6 +7,8 @@
     text-align: center;
     padding: 16px;
     position: relative;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .titulo:after {
@@ -46,7 +48,7 @@
     margin-top: 56px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
 
     .titulo:before, .titulo:after  {
         display: none;
@@ -59,6 +61,19 @@
        flex-wrap: wrap;
        margin-left: 60px;
        margin-right: 60px;
+    }
+    
+}
+
+@media (max-width: 500px) {
+
+    .titulo {
+        width: 289px;
+        font-size: 32px;
+    }
+
+    .listas {
+       text-align: center;
     }
     
 }
