--- a/src/components/Rodape/Rodape.module.css
+++ b/src/components/Rodape/Rodape.module.css
@@ -35,3 +35,29 @@
 .logo {
     width: 233.9px;
 }
+
+@media (max-width: 1100px) {
+
+    .rodape {
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+    }
+
+    .primeiraParte {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .disclaimer p{
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .social {
+        flex-direction: column;
+    }
+}
