--- a/src/pages/Mapa/Mapa.module.css
+++ b/src/pages/Mapa/Mapa.module.css
@@ -36,3 +36,23 @@
 .divLegenda:hover {
     cursor: pointer;
 }
+
+@media (max-width: 1200px) {
+    .containerMapa {
+        flex-direction: column;
+        padding-top: 32px;
+        gap: 48px;
+    }
+
+    .cards {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 600px) {
+    .fotoMapa {
+        width: 360px;
+        height: 360px;
+    }
+}
