--- a/src/pages/ComprarIngresso/CompraIngresso.module.css
+++ b/src/pages/ComprarIngresso/CompraIngresso.module.css
@@ -13,6 +13,11 @@
     background: linear-gradient(180deg, #BFDAE6 0%, #FCF0DD 50%, #FACF9D 100%);
 }
 
+.conteudoBoreal {
+    background: linear-gradient(180deg, #393068 0%, #36C1A0 52.60%, #4650BD 100%);
+    color: var(--branco);
+}
+
 .form {
     margin-top: 48px;
     display: flex;
@@ -76,6 +81,10 @@
 .inputFieldShared {
     width: 385.5px;
     height: 40px;
+}
+
+.branco {
+    color: var(--branco);
 }
 
 @media (max-width: 1200px) {
