--- a/src/pages/Mapa/Mapa.module.css
+++ b/src/pages/Mapa/Mapa.module.css
@@ -2,6 +2,11 @@
     background: linear-gradient(180deg, #BFDAE6 0%, #FCF0DD 50%, #FACF9D 100%);
 }
 
+.conteudoBoreal {
+    background: linear-gradient(180deg, #393068 0%, #36C1A0 52.60%, #4650BD 100%);
+    color: var(--branco);
+}
+
 .containerMapa {
     display: flex; 
     justify-content: center;
@@ -36,6 +41,8 @@
 .divLegenda:hover {
     cursor: pointer;
 }
+
+
 
 @media (max-width: 1200px) {
     .containerMapa {
