--- a/src/pages/Ingresso/Ingresso.module.css
+++ b/src/pages/Ingresso/Ingresso.module.css
@@ -1,5 +1,4 @@
 .conteudo {
-    background: linear-gradient(180deg, #BFDAE6 0%, #FCF0DD 50%, #FACF9D 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,6 +57,14 @@
 
 .imprimir:hover{
     cursor: pointer;
+}
+
+.conteudoBoreal {
+    background: linear-gradient(180deg, #393068 0%, #36C1A0 52.60%, #4650BD 100%);
+}
+
+.branco {
+    color: var(--branco);
 }
 
 @media (max-width: 1200px) {
